<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView_Title_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cycle_life_title_text"
        android:textColor="@color/primary_color_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_number_hind"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/other_number_hind"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_result_text" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickAdd"
        android:text="@string/button_add_text"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSubstract"
        android:text="@string/button_subtract_text"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDivide"
        android:text="@string/button_divide_text"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonPow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickPow"
        android:text="@string/button_pow_text"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonFactorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickFactorial"
        android:text="@string/button_factorial_text"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonSecondActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickShowSecondActivity"
        android:text="@string/button_show_activity_second_text"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>